# ols-mcp-server

./: README_DAB.md  app.yaml  databricks.yml  mcp-config.json  pyproject.toml  test-local.py  test_deployed_server.ipynb  turn-it-into-mcp-app.ipynb  validate-mcp.ipynb
app/: DEPLOYMENT.md  app.py  app.py.bak  app.yaml  requirements.txt
resources/: app.yml
server/: app.py  main.py  models.py  tools.py
static/: index.html
