[project]
name = "mcp-ols-server"
version = "0.1.0"
description = "MCP server for Ontology Lookup Service (OLS) API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.12.5",
    "httpx>=0.24.0",
    "mcp[cli]>=1.14.0",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-ols-server = "server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
